Some quality fixes like =='' to isEmpty()